# AIOps-Agent

./: .env.example  .gitignore  Dockerfile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
configs/: settings.yaml
configs/prompts/: classify.jinja  qa.jinja  rca.jinja  summarize.jinja
configs/runbooks/: restart_pod.yaml
data/: eval.jsonl
examples/: alert_demo.py  chat_demo.py  rest_demo.sh
scripts/: init_milvus.py  init_neo4j.cypher  init_neo4j.py  seed_knowledge.py  setup.sh
src/aiops/: __init__.py  main.py
src/aiops/agents/: base.py  heal_agent.py  monitor_agent.py  qa_agent.py  rag_agent.py  rca_agent.py
src/aiops/bus/: kafka_consumer.py  kafka_producer.py  topics.py
src/aiops/core/: config.py  exceptions.py  logging.py  types.py
src/aiops/eval/: metrics.py  ragas_runner.py  tracer.py
src/aiops/heal/: executor.py  runbook_loader.py
src/aiops/llm/: client.py  embedding.py  rerank.py
src/aiops/memory/: long_term.py  short_term.py
src/aiops/monitor/: collector.py  log_detector.py  metrics_detector.py
src/aiops/rag/: fusion.py  pipeline.py  reranker.py  retriever_bm25.py  retriever_vector.py  router.py  semantic_cache.py
src/aiops/rca/: analyzer.py  graph_client.py  topology_query.py
src/aiops/resilience/: circuit_breaker.py  retry.py
tests/: conftest.py
tests/integration/: test_e2e_alert_to_heal.py
tests/unit/: test_anomaly.py  test_circuit_breaker.py  test_fusion.py  test_log_regex.py  test_rag_pipeline.py  test_router.py  test_runbook.py
